Fix spacing in .section-hero

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header h1 {
 .section-hero {
     background-color: #1f2937;
     margin: 0;
-    padding: 100px 200px;
+    padding: 90px 200px;
     display: flex;
 }
 
